# VisiSec

./: .gitignore  .rules  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_REPORT.md  IMPLEMENTATION_SUMMARY.md  MOTION_API_FIX.md  MOTION_PERMISSION_FIX_SUMMARY.md  PROJECT_COMPLETION_SUMMARY.md  PROJECT_STATUS.md  README.md  SETUP_GUIDE_CN.md  USAGE_GUIDE_CN.md
backend/: .env.example  README.md  pyproject.toml
backend/src/visisec_backend/: __init__.py  main.py
frontend/: .env.example  EDGE_MODEL_DEPLOYMENT.md  PERMISSIONS_GUIDE.md  capacitor.config.json  index.html  package-lock.json  package.json
frontend/android/app/: build.gradle
frontend/android/app/src/main/: AndroidManifest.xml
frontend/android/app/src/main/java/com/visisec/app/: MainActivity.java
frontend/android/app/src/main/res/drawable/: ic_launcher_foreground.xml
frontend/android/app/src/main/res/values/: strings.xml
frontend/src/: App.vue  style.css
frontend/src/components/: Navigation.vue
frontend/src/i18n/locales/: en-US.json  zh-CN.json
frontend/src/router/: index.js
frontend/src/services/: api.js  auth.js  edgeModels.js  sensors.js  websocket.js
frontend/src/views/: Home.vue  Login.vue  Record.vue  Register.vue  Settings.vue  Summary.vue  Timeline.vue
