[project]
name = "visisec-backend"
version = "0.1.0"
description = "VisiSec Backend - Multimodal meeting analysis API"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    "opencv-python>=4.10.0",
    "numpy>=1.26.0",
    "pillow>=10.0.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "flask>=3.0.0",
    "flask-cors>=4.0.0",
    "flask-socketio>=5.3.0",
    "python-socketio>=5.11.0",
    "simple-websocket>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]
